[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
hostfile = "1.1.0"
mio = { version = "1.0.3", features = ["net","os-poll"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
tera = "1.20.0"
toml = "0.8.19"
urlencoding = "2.1.3"
url = "2.5.4"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",
    "v7",
    "js",
]
